src/assets/css/styles.css
/* ... */
/* Sections
   ======================================== */

body {
	display: grid;
	grid-template-rows: auto 1fr auto;
	font-family: var(--ff-body);
	font-size: var(--step-0);
	font-weight: var(--fw-400);
	font-variant-ligatures: no-common-ligatures;
	line-height: var(--lh-large);
	color: var(--c-tx-1);
	background-color: var(--c-bg-1);
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: var(--ff-headings);
	font-weight: var(--fw-700);
	font-variant-ligatures: normal;
	line-height: var(--lh-small);
}

h1 {
	font-size: var(--step-4);
}

h2 {
	font-size: var(--step-3);
}

h3 {
	font-size: var(--step-2);
}

h4 {
	font-size: var(--step-1);
}

h5 {
	font-size: var(--step-0);
}

h6 {
	font-size: var(--step--1);
}

/* Grouping content
   ======================================== */

hr {
	block-size: var(--bw-2);
	background-color: var(--c-bd-1);
	border: none;
}

pre {
	padding-block: var(--padding-md);
	padding-inline: var(--padding-lg);
	font-family: var(--ff-mono);
	font-size: 0.875em;
	background-color: var(--c-bg-3);
	border-radius: var(--border-radius);
}

blockquote {
	padding-inline: 1em;
	margin-inline: 0;
	color: var(--c-tx-2);
	border-inline-start: var(--bw-4) solid var(--c-bd-1);
}

ol,
ul,
menu {
	padding-inline-start: 1em;
}

dt {
	font-weight: var(--fw-700);
}

dd {
	margin-inline-start: var(--padding-xl);
}

/* Text-level semantics
   ======================================== */

a {
	color: var(--c-link);
	transition: color var(--tr-duration) var(--tr-timing-function);
}

:is(h1, h2, h3, h4, h5, h6) a {
	color: inherit;
}

.site-header a {
	display: inline-block;
	line-height: var(--lh-small);
	color: inherit;
	text-decoration: none;
}

a:is(:hover, :focus) {
	text-decoration: none;
}

.site-nav a {
	position: relative;
}

.site-nav a:is([aria-current="page"], :hover)::after {
	--underline-thickness: var(--bw-3);

	position: absolute;
	inset-block-end: calc(-2 * var(--underline-thickness));
	inset-inline: 0;
	display: block;
	content: "";
	block-size: var(--underline-thickness);
	background-color: var(--c-bd-1);
}

.site-nav a[aria-current="page"]::after {
	background-color: var(--c-accent);
}

b,
strong {
	font-weight: var(--fw-700);
}

code,
samp,
kbd {
	font-family: var(--ff-mono);
	font-size: 0.875em;
}

code {
	padding-block: var(--padding-xxxs);
	padding-inline: var(--padding-xxs);
	background-color: var(--c-bg-a);
	border-radius: var(--border-radius);
}

pre code {
	padding: 0;
	margin: 0;
	font-size: inherit;
	color: inherit;
	background: inherit;
	border-radius: 0;
}

kbd {
	display: inline-block;
	padding-block: var(--padding-xxs);
	padding-inline: var(--padding-xs);
	font-family: var(--ff-body);
	line-height: 1;
	white-space: nowrap;
	border: var(--bw-1) solid var(--c-bd-1);
	border-radius: var(--border-radius);
	box-shadow: inset 0 calc(-1 * var(--bw-1)) 0 var(--c-bd-1);
}

mark {
	padding-inline: var(--padding-xxs);
	color: inherit;
	background-color: var(--c-mark);
}

/* Embedded content
   ======================================== */

iframe {
	border: var(--bw-1) solid var(--c-bd-1);
}

/* Tabular data
   ======================================== */

th,
td {
	padding-block: var(--padding-xs);
	padding-inline: var(--padding-sm);
	border: var(--bw-1) solid var(--c-bd-1);
}

th,
thead,
tfoot {
	font-weight: var(--fw-600);
}

th,
thead :is(tr, td),
tfoot tr {
	background-color: var(--c-bg-2);
}

td:has(+ th) {
	background-color: var(--c-bg-2);
}

caption {
	padding-block: var(--padding-xxs);
	font-weight: var(--fw-600);
}

/* Forms
   ======================================== */

fieldset {
	border: var(--bw-2) solid var(--c-bd-2);
	border-radius: var(--border-radius);
}

legend {
	font-weight: var(--fw-600);
}

label {
	display: inline-block;
}

input,
textarea,
select,
button {
	padding-block: var(--padding-xs);
	padding-inline: var(--padding-sm);
	line-height: var(--lh-small);
	color: inherit;
	background-color: var(--c-bg-2);
	border: var(--bw-2) solid transparent;
	border-radius: var(--border-radius);
	transition: color var(--tr-duration) var(--tr-timing-function), background-color var(--tr-duration) var(--tr-timing-function), border-color var(--tr-duration) var(--tr-timing-function);
}

button,
[type="button"],
[type="image"],
[type="submit"],
[type="reset"] {
	display: inline-flex;
	gap: 1ch;
	align-items: center;
	justify-content: center;
	padding-inline: var(--padding-md);
	font-weight: var(--fw-600);
	text-align: center;
	background-color: var(--c-bg-1);
	border-color: var(--c-bd-1);
}

[type="image"] {
	padding: revert;
	background-color: revert;
	border: revert;
}

[type="submit"] {
	color: var(--c-bg-1);
	background-color: var(--c-tx-1);
	border-color: var(--c-tx-1);
}

:is(input, textarea, select, button):hover {
	border-color: var(--c-bd-1);
}

:is(input, textarea, select, button):focus {
	background-color: var(--c-bg-1);
}

:is(button, [type="button"], [type="image"], [type="submit"], [type="reset"]):hover {
	background-color: var(--c-bg-2);
}

:is(button, [type="button"], [type="image"], [type="submit"], [type="reset"]):focus {
	background-color: var(--c-bg-2);
}

[type="image"]:hover {
	background-color: revert;
	border-color: revert;
}

[type="image"]:focus {
	background-color: revert;
	border-color: revert;
}

[type="submit"]:hover {
	color: inherit;
	background-color: var(--c-bg-1);
	border-color: var(--c-tx-1);
}

[type="submit"]:focus {
	color: inherit;
	background-color: var(--c-bg-1);
	border-color: var(--c-tx-1);
}

[type="color"] {
	inline-size: 3em;
	block-size: 1.5em;
	padding: var(--padding-xxs);
}

[type="color"]::-webkit-color-swatch-wrapper {
	padding: 0;
}

[type="color"]:is(::-webkit-color-swatch, ::-moz-color-swatch) {
	border: var(--bw-1) solid var(--c-bd-1);
	border-radius: calc(var(--border-radius) / 2);
}

:disabled,
[aria-disabled],
[aria-disabled="true"] {
	opacity: 0.333;
}

/* Interactive elements
   ======================================== */

details {
	padding-inline: var(--padding-xs);
}
/* ... */

